# helix

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
airflow/: requirements.txt
airflow/dags/: etl_dag.py  ingestion_dag.py  monitoring_dag.py  retraining_dag.py
docs/superpowers/plans/: 2026-04-08-frontend.md
docs/superpowers/specs/: 2026-04-08-frontend-design.md
infrastructure/airflow/: Dockerfile
infrastructure/alertmanager/: alertmanager.yml
infrastructure/grafana/dashboards/: data_drift.json  (+3 more)
infrastructure/loki/: loki-config.yml
infrastructure/mlflow/: Dockerfile
infrastructure/nginx/: nginx.conf
infrastructure/postgres/: postgresql.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/promtail/: promtail-config.yml
infrastructure/trt-exporter/: Dockerfile
migrations/: env.py
migrations/versions/: 161d862c03eb_initial_schema.py
scripts/: bootstrap.sh  export_tensorrt.sh  inject_drift.py  seed_data.sh  setup_github.sh
services/etl/: pyproject.toml
services/etl/src/etl/: feature_store.py  main.py
services/etl/src/etl/transformers/: label_generator.py  rolling_stats.py  technical_indicators.py
services/etl/src/etl/validators/: expectations.py
services/frontend/: Dockerfile  requirements.txt
services/inference/: Dockerfile  pyproject.toml
services/inference/src/inference/: config.py  main.py
services/inference/src/inference/api/: routes.py
services/inference/src/inference/api/middleware/: auth.py  metrics.py
services/inference/src/inference/core/: model_loader.py  preprocessor.py
services/ingestion/: pyproject.toml
services/ingestion/src/ingestion/: main.py
services/ingestion/src/ingestion/fetchers/: yahoo_finance.py
services/ingestion/src/ingestion/writers/: minio_writer.py  postgres_writer.py
services/monitoring/: Dockerfile  pyproject.toml
services/monitoring/src/monitoring/: config.py  main.py
services/monitoring/src/monitoring/drift/: evidently_runner.py
services/monitoring/src/monitoring/metrics/: model_metrics.py
services/training/: pyproject.toml
services/training/src/training/: main.py
services/training/src/training/datasets/: time_series_dataset.py
services/training/src/training/exporters/: onnx_exporter.py  tensorrt_exporter.py
services/training/src/training/models/: lstm_transformer.py
services/training/src/training/trainers/: anomaly_trainer.py
shared/: pyproject.toml
shared/src/shared/: config.py  db.py  logging.py  storage.py
tests/: conftest.py
tests/load/: locustfile.py  report.html
tests/unit/: test_model.py  test_transformers.py
(+10 files in other folders)
