[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-shared"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
            "structlog>=24.1.0",
            "minio>=7.2.0",
            "pydantic-settings>=2.2.0",
            ]

[tool.setuptools.packages.find]
where = ["src"]
