[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-inference"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "mlflow>=2.11.0,<2.18.0",
    "minio>=7.2.0",
    "psycopg2-binary>=2.9.9",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.17.0",
    "prometheus-client>=0.19.0",
    "slowapi>=0.1.9",
    "torch>=2.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
