[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.0.0",
    "structlog>=24.1.0",
    "psycopg2-binary>=2.9.9",
]

[tool.setuptools.packages.find]
where = ["src"]
